Fixed spacing for google homepage

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -14,12 +18,21 @@ body, input, button {
 .top {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 8px;
 }
 
 .bottom {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     background: #f2f2f2;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .logo-container {
